tests/ui/consts/control-flow/loop.stderr
error[E0277]: the trait bound `std::ops::Range<{integer}>: const Iterator` is not satisfied
  --> $DIR/loop.rs:53:14
   |
LL |     for i in 0..4 {
   |              ^^^^ required by a bound introduced by this call
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL
   = note: required for `std::ops::Range<{integer}>` to implement `const IntoIterator`

error[E0277]: the trait bound `std::ops::Range<{integer}>: const Iterator` is not satisfied
  --> $DIR/loop.rs:53:14
   |
LL |     for i in 0..4 {
   |              ^^^^
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL

error[E0277]: the trait bound `std::ops::Range<{integer}>: const Iterator` is not satisfied
  --> $DIR/loop.rs:59:14
   |
LL |     for i in 0..4 {
   |              ^^^^ required by a bound introduced by this call
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL
   = note: required for `std::ops::Range<{integer}>` to implement `const IntoIterator`

error[E0277]: the trait bound `std::ops::Range<{integer}>: const Iterator` is not satisfied
  --> $DIR/loop.rs:59:14
   |
LL |     for i in 0..4 {
   |              ^^^^
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
